# delanauy-triangles

./: build.sh  index.htm  manage.py  pyproject.toml  render.yaml  requirements.txt  styles.css
delanauy_triangles/: asgi.py  settings.py  urls.py  wsgi.py
gettingstarted/: urls.py
hello/: test-griddata.py  trials.py  triangle_test.py  triangles_minimal.py  triangles_minimal_test(success).py  views.py
render/: index.html  trial1(success).py  triangles_minimal_griddata.py  urls.py  views.py
render/templates/render/: scripts.js
