[tool.poetry]
name = "delanauy_triangles"
version = "0.1.0"
description = ""
authors = ["Kishore S. Shenoy <kichappa@gmail.com>"]
readme = "README.md"
packages = [{include = "delanauy_triangles"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
gunicorn = "^20.1.0"
requests = "^2.28.1"
numpy = "^1.23.5"
scipy = "^1.9.3"
colour = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
